Import patches-unapplied version 2.13.0-0ubuntu2 to ubuntu/dapper

Imported using git-ubuntu import.

Changelog parent: 6f695120e77395dbdc9eb21647e6a5cf87889d88

New changelog entries:
  * debian/patches/revert-patch-for-environment-variables.patch:
    - revert patch from http://bugzilla.gnome.org/show_bug.cgi?id=98715
  * New upstream release:
    - Don't lose environment variables on startup (Davyd)
    - Only show mnemonics when the menubar is visible (DanW)
    - Detachable and movable tabs (Tony Tsui, Mario Manno)
    - Don't use deprecated widgets (Dennis Cranston)
    - Don't pass include flags to the link stage (dmacks@netspace.org)
  * debian/patches/02_autoconf.patch,
    debian/patches/tab-change.patch:
    - updated.
  * debian/patches/enable-deprecated:
    - circumvent momentary build failures.
  * debian/control.in:
    - Depends on {misc:Depends}