src/terminal.c
@@ -25,6 +25,7 @@
 #include "terminal.h"
 #include "terminal-accels.h"
 #include "terminal-window.h"
+#include "terminal-notebook.h"
 #include "terminal-widget.h"
 #include "profile-editor.h"
 #include "encoding.h"
@@ -42,7 +43,6 @@
 #include <stdlib.h>
 #include <time.h>
 #include <gdk/gdkx.h>
-
 
 /* Settings storage works as follows:
  *   /apps/gnome-terminal/global/
@@ -1381,7 +1381,8 @@ option_parsing_results_apply_directory_defaults (OptionParsingResults *results)
 }
 
 static int
-new_terminal_with_options (OptionParsingResults *results)
+new_terminal_with_options_and_environ (OptionParsingResults *results,
+                                       char                 **env)
 {
   GList *tmp;
   
@@ -1432,6 +1433,7 @@ new_terminal_with_options (OptionParsingResults *results)
               terminal_app_new_terminal (app,
                                          profile,
                                          NULL,
+                                         NULL,
                                          iw->force_menubar_state,
                                          iw->menubar_state,
                                          iw->start_fullscreen,
@@ -1444,7 +1446,8 @@ new_terminal_with_options (OptionParsingResults *results)
                                          it->zoom : 1.0,
                                          results->startup_id,
                                          results->display_name,
-                                         results->screen_number);
+                                         results->screen_number,
+					 env);
 
               current_window = g_list_last (app->windows)->data;
             }
@@ -1453,6 +1456,7 @@ new_terminal_with_options (OptionParsingResults *results)
               terminal_app_new_terminal (app,
                                          profile,
                                          current_window,
+                                         NULL,
                                          FALSE, FALSE,
                                          FALSE/*not fullscreen*/,
                                          it->exec_argv,
@@ -1462,7 +1466,8 @@ new_terminal_with_options (OptionParsingResults *results)
                                          NULL,
                                          it->zoom_set ?
                                          it->zoom : 1.0,
-                                         NULL, NULL, -1);
+                                         NULL, NULL, -1,
+					 env);
             }
           
           if (it->active)
@@ -1484,6 +1489,12 @@ new_terminal_with_options (OptionParsingResults *results)
     }
 
   return 0;
+}
+
+static inline int
+new_terminal_with_options (OptionParsingResults *results)
+{
+	return new_terminal_with_options_and_environ (results, NULL);
 }
 
 /* This assumes that argv already has room for the args,
@@ -1884,6 +1895,7 @@ void
 terminal_app_new_terminal (TerminalApp     *app,
                            TerminalProfile *profile,
                            TerminalWindow  *window,
+                           TerminalScreen  *screen,
                            gboolean         force_menubar_state,
                            gboolean         forced_menubar_state,
                            gboolean         start_fullscreen,
@@ -1895,17 +1907,18 @@ terminal_app_new_terminal (TerminalApp     *app,
                            double           zoom,
                            const char      *startup_id,
                            const char      *display_name,
-                           int              screen_number)
+                           int              screen_number,
+			   char           **env)
 {
-  TerminalScreen *screen;
   gboolean window_created;
+  gboolean screen_created;
   
   g_return_if_fail (profile);
 
   window_created = FALSE;
   if (window == NULL)
     {
-      GdkScreen *screen;
+      GdkScreen *gdk_screen;
       
       window_created = TRUE;
       window = terminal_window_new (conf);
@@ -1917,11 +1930,11 @@ terminal_app_new_terminal (TerminalApp     *app,
       
       app->windows = g_list_append (app->windows, window);
 
-      screen = find_screen_by_display_name (display_name, screen_number);
-      if (screen != NULL)
+      gdk_screen = find_screen_by_display_name (display_name, screen_number);
+      if (gdk_screen != NULL)
         {
-          gtk_window_set_screen (GTK_WINDOW (window), screen);
-          g_object_unref (G_OBJECT (screen));
+          gtk_window_set_screen (GTK_WINDOW (window), gdk_screen);
+          g_object_unref (G_OBJECT (gdk_screen));
         }
 
       if (startup_id != NULL)
@@ -1937,27 +1950,43 @@ terminal_app_new_terminal (TerminalApp     *app,
     {
       terminal_window_set_menubar_visible (window, forced_menubar_state);
     }
-  
-  screen = terminal_screen_new ();
-  
-  terminal_screen_set_profile (screen, profile);
 
-  if (title)
-    terminal_screen_set_dynamic_title (screen, title);
+  screen_created = FALSE;
+  if (screen == NULL)
+    {  
+      screen_created = TRUE;
+      screen = terminal_screen_new ();
+      
+      terminal_screen_set_profile (screen, profile);
+    
+      if (title)
+        terminal_screen_set_dynamic_title (screen, title);
+    
+      if (working_dir)
+        terminal_screen_set_working_dir (screen, working_dir);
+      
+      if (override_command)    
+        terminal_screen_set_override_command (screen, override_command);
 
-  if (working_dir)
-    terminal_screen_set_working_dir (screen, working_dir);
-  
-  if (override_command)    
-    terminal_screen_set_override_command (screen, override_command);
+      if (env)
+        terminal_screen_set_environ (screen, env);
+    
+      terminal_screen_set_font_scale (screen, zoom);
+    
+      terminal_window_add_screen (window, screen);
 
-  terminal_screen_set_font_scale (screen, zoom);
-  
-  terminal_window_add_screen (window, screen);
-
-  g_object_unref (G_OBJECT (screen));
-
-  terminal_window_set_active (window, screen);
+      g_object_unref (G_OBJECT (screen));
+    
+      terminal_window_set_active (window, screen);
+    }
+  else
+   {
+      TerminalWindow *src_win = terminal_screen_get_window (screen);
+      TerminalNotebook *src_notebook = terminal_window_get_notebook (src_win);
+      TerminalNotebook *dest_notebook = terminal_window_get_notebook (window);
+      
+      terminal_notebook_move_tab (src_notebook, dest_notebook, screen, 0);
+    }
 
   if (geometry)
     {
@@ -1979,7 +2008,8 @@ terminal_app_new_terminal (TerminalApp     *app,
   if (window_created)
     gtk_window_present (GTK_WINDOW (window));
 
-  terminal_screen_launch_child (screen);
+  if (screen_created)
+    terminal_screen_launch_child (screen);
 }
 
 static GList*
@@ -2304,12 +2334,12 @@ new_profile_response_callback (GtkWidget *new_profile_dialog,
     {
       GtkWidget *name_entry;
       char *name;
+      char *escaped_name;
       GtkWidget *base_option_menu;
       TerminalProfile *base_profile = NULL;
       TerminalProfile *new_profile;
       GList *profiles;
       GList *tmp;
-      GSList n;
       GtkWindow *transient_parent;
       GtkWidget *confirm_dialog;
       gint retval;
@@ -2356,10 +2386,11 @@ new_profile_response_callback (GtkWidget *new_profile_dialog,
       
       terminal_profile_create (base_profile, name, transient_parent);
 
-      n.next = NULL;
-      n.data = gconf_escape_key (name, -1);
-      sync_profile_list (TRUE, &n);
-      g_free (n.data);
+      escaped_name = gconf_escape_key (name, -1);
+      new_profile = terminal_profile_new (escaped_name, conf);
+      terminal_profile_update (new_profile);
+      sync_profile_list (FALSE, NULL);
+      g_free (escaped_name);
       
       new_profile = terminal_profile_lookup_by_visible_name (name);
 
@@ -3019,7 +3050,7 @@ terminal_app_manage_profiles (TerminalApp     *app,
       gtk_rc_parse_string ("widget \"profile-manager-dialog\" style \"hig-dialog\"\n");
 
       gtk_dialog_set_has_separator (GTK_DIALOG (app->manage_profiles_dialog), FALSE);
-      gtk_container_set_border_width (GTK_CONTAINER (app->manage_profiles_dialog), 12);
+      gtk_container_set_border_width (GTK_CONTAINER (app->manage_profiles_dialog), 10);
       gtk_box_set_spacing (GTK_BOX (GTK_DIALOG (app->manage_profiles_dialog)->vbox), 12);
 
       main_vbox = gtk_vbox_new (FALSE, 12);
@@ -3645,11 +3676,13 @@ typedef struct
 {
   int argc;
   char **argv;
+  char **environ;
 } NewTerminalEvent;
 
 static void
 handle_new_terminal_event (int          argc,
-                           char       **argv)
+                           char       **argv,
+			   char       **env)
 {
   int nextopt;
   poptContext ctx;
@@ -3657,7 +3690,7 @@ handle_new_terminal_event (int          argc,
   OptionParsingResults *results;
 
   g_assert (initialization_complete);
-  
+
   results = option_parsing_results_init (&argc, argv);
   
   /* Find and parse --display */
@@ -3690,7 +3723,7 @@ handle_new_terminal_event (int          argc,
 
   option_parsing_results_apply_directory_defaults (results);
 
-  new_terminal_with_options (results);
+  new_terminal_with_options_and_environ (results, env);
 
   option_parsing_results_free (results);
 }
@@ -3703,14 +3736,17 @@ handle_new_terminal_events (void)
       GSList *next = pending_new_terminal_events->next;
       NewTerminalEvent *event = pending_new_terminal_events->data;
 
-      handle_new_terminal_event (event->argc, event->argv);
+      handle_new_terminal_event (event->argc, event->argv, event->environ);
 
       g_strfreev (event->argv);
+      g_strfreev (event->environ);
       g_free (event);
       g_slist_free_1 (pending_new_terminal_events);
       pending_new_terminal_events = next;
     }
 }
+
+#define END_ENVIRON "END-ENVIRON"
 
 /*
  *   Invoked remotely to instantiate a terminal with the
@@ -3724,8 +3760,11 @@ terminal_new_event (BonoboListener    *listener,
 		    gpointer           user_data)
 {
   CORBA_sequence_CORBA_string *args;
+  char **tmp_strv;
   char **tmp_argv;
+  char **tmp_environ;
   int tmp_argc;
+  int tmp_lenviron;
   int i;
   NewTerminalEvent *event;
   
@@ -3738,19 +3777,60 @@ terminal_new_event (BonoboListener    *listener,
 
   args = any->_value;
   
-  tmp_argv = g_new0 (char*, args->_length + 1);
+  /* the buffer contains [environ] END_ENVIRON [argv] */
+  tmp_strv = g_new0 (char*, args->_length);
   i = 0;
+  tmp_lenviron = 0;
   while (i < args->_length)
     {
-      tmp_argv[i] = g_strdup (((const char**)args->_buffer)[i]);
+      tmp_strv[i] = g_strdup (((const char**)args->_buffer)[i]);
+      if (i == tmp_lenviron && strcmp (END_ENVIRON, tmp_strv[i]))
+	      tmp_lenviron++;
       ++i;
     }
-  tmp_argv[i] = NULL;
-  tmp_argc = i;
 
+  /* copy argv */
+  tmp_argc = i - tmp_lenviron - 1;
+  tmp_argv = g_new0 (char*, tmp_argc + 1);
+#if 0
+  g_print ("Got %d argv entries\n", tmp_argc);
+#endif
+  for (i = tmp_lenviron + 1; i < args->_length; i++)
+  {
+#if 0
+      g_print ("accessing argv[%d] and strv[%d] (= %s)\n",
+                      i - tmp_lenviron - 1, i, tmp_strv[i]);
+#endif
+      tmp_argv[i - tmp_lenviron - 1] = tmp_strv[i];
+  }
+  tmp_argv[tmp_argc+1] = NULL;
+#if 0
+  g_print ("---- dumping argv ----\n");
+  for (i = 0; i < tmp_argc; i++)
+      g_print ("%s\n", tmp_argv [i]);
+  g_print ("---- done ----\n");
+#endif
+  
+  /* copy environ */
+  tmp_environ = g_new0 (char*, tmp_lenviron + 1);
+  for (i = 0; i < tmp_lenviron; i++)
+  {
+      tmp_environ[i] = tmp_strv[i];
+  }
+#if 0
+  g_print ("---- dumping environ ----\n");
+  for (i = 0; i < tmp_lenviron; i++)
+      g_print ("%s\n", tmp_environ [i]);
+  g_print ("---- done ----\n");
+#endif
+
+  /* We don't free the strings, just the array */
+  g_free (tmp_strv);
+  
   event = g_new0 (NewTerminalEvent, 1);
   event->argc = tmp_argc;
   event->argv = tmp_argv;
+  event->environ = tmp_environ;
 
   pending_new_terminal_events = g_slist_append (pending_new_terminal_events,
                                                 event);
@@ -3810,7 +3890,9 @@ terminal_invoke_factory (int argc, char **argv)
 
   if (listener != CORBA_OBJECT_NIL)
     {
+      extern char **environ;
       int i;
+      int lenviron;
       CORBA_any any;
       CORBA_sequence_CORBA_string args;
       CORBA_Environment ev;
@@ -3820,12 +3902,26 @@ terminal_invoke_factory (int argc, char **argv)
       any._type = TC_CORBA_sequence_CORBA_string;
       any._value = &args;
 
-      args._length = argc;
+      lenviron = g_strv_length (environ);
+      /* we are packing [environ] END [argv] */
+      args._length = lenviron + argc + 1;
       args._buffer = g_newa (CORBA_char *, args._length);
 
+      /* copy environ into the buffer */
+      for (i = 0; i < lenviron; i++)
+        args._buffer[i] = environ[i];
+      args._buffer [lenviron] = END_ENVIRON;
+      /* copy argv into the buffer */
+      for (i = lenviron + 1; i < args._length; i++)
+        args._buffer [i] = argv [i - lenviron - 1];
+
+#if 0
+      g_print ("---- dumping array ----\n");
       for (i = 0; i < args._length; i++)
-        args._buffer [i] = argv [i];
-      
+	      g_print ("%s\n", args._buffer [i]);
+      g_print ("---- done ----\n");
+#endif
+		      
       Bonobo_Listener_event (listener, "new_terminal", &any, &ev);
       CORBA_Object_release (listener, &ev);
       if (!BONOBO_EX (&ev))
